--- a/Assets/StreamingAssets/Languages/ru_RU.json
+++ b/Assets/StreamingAssets/Languages/ru_RU.json
@@ -59,6 +59,10 @@
     {
       "Key": "hard_restart",
       "Value": "ЖОСТКИЙ ПЕРЕЗАПУСК"
+    },
+    {
+      "Key": "die_text",
+      "Value": "Ваша оболочка не выдержала \n ПЕРЕЗАГРУЗИТЬ?"
     }
 
   ]
