--- a/Assets/StreamingAssets/Languages/ua_UA.json
+++ b/Assets/StreamingAssets/Languages/ua_UA.json
@@ -59,6 +59,10 @@
     {
       "Key": "hard_restart",
       "Value": "ЖОРСТКИЙ ПЕРЕЗАПУСК"
+    },
+    {
+      "Key": "die_text",
+      "Value": "Твоя оболонка не витримала \n ПЕРЕЗАВАНТАЖИТИ?"
     }
 
   ]
