--- a/Assets/StreamingAssets/Languages/en_US.json
+++ b/Assets/StreamingAssets/Languages/en_US.json
@@ -70,7 +70,7 @@
       "Dialogues": {
         "Hero": {
           "Phrases": {
-            "greeting": "Hello!",
+            "greeting": "Hello my friend Pedro or Huano, I'm brbrbrbrbbrrbbbrbrbrbrbrbbbrbrbbrbrbrbrbrbbrbrbrbrbrbrbrbrbbrbrbrbrb'!",
             "question": "How are you?"
           }
         },
